Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-112761

ctf_array produce an error while compiling with lttng enabled

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P1: Critical P1: Critical
    • 6.5.1, 6.6.0
    • 6.5.0 RC
    • Core: Other
    • None
    • Linux/Wayland, Linux/X11
    • c10c66e55 (dev), 81caae1dd (6.5)

      the issue happens because a float type is passed to ctf_array by the tracegen tool while ctf_array macro accepts int types only

      qtbase/src/gui/qtgui_tracepoints_p.h:514:15: error: static assertion failed: Non-integer type `matrix` not supported as element of LTTNG_UST_FIELD_ARRAY or LTTNG_UST_FIELD_SEQUENCE514 | TP_FIELDS(ctf_array(double, matrix, matrix, 9)

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            hatemelkharashy Hatem ElKharashy
            hatemelkharashy Hatem ElKharashy
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes