Support float_type arrays when using lttng

lttng ctf_array does not support float types which
causes compilation error when a float type is passed
to the function. A solution is to pass the array
elements one by one to TP_FIELDS.

Fixes: QTBUG-112761
Change-Id: I30e7049d9eda1141298145897df372213145c1b4
Reviewed-by: Antti Määttä <antti.maatta@qt.io>
Reviewed-by: Janne Koskinen <janne.p.koskinen@qt.io>
(cherry picked from commit c10c66e552e3ab19758709e84bac187cda27962c)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>